fix: 소극장 공연 등록 엔티티 및 구조 수정